Migrate from IconScout to Freepik API for design assets and update related documentation

--- a/terms.html
+++ b/terms.html
@@ -152,8 +152,8 @@
             </h2>
             <p>
               PeelJoy is a platform that provides access to design assets
-              including icons, 3D icons, illustrations, and Lottie animations.
-              We aggregate and display content from IconScout's API for users to
+              including icons, 3D graphics, illustrations, and animated vectors.
+              We aggregate and display content from Freepik's API for users to
               browse and download.
             </p>
           </section>
@@ -164,11 +164,11 @@
             </h2>
             <p class="mb-3">
               The design assets available on PeelJoy are provided through
-              IconScout's API. When downloading and using these assets, you
-              agree to:
+              Freepik's API. When downloading and using these assets, you agree
+              to:
             </p>
             <ul class="list-disc pl-6 space-y-2">
-              <li>Comply with IconScout's licensing terms for each asset</li>
+              <li>Comply with Freepik's licensing terms for each asset</li>
               <li>Not redistribute assets as standalone files</li>
               <li>Not claim ownership of assets created by others</li>
               <li>Use assets only for their intended purposes</li>
@@ -198,7 +198,7 @@
             <p>
               The PeelJoy website design, logo, and original content are owned
               by us. The design assets displayed are owned by their respective
-              creators and are subject to IconScout's licensing terms. All
+              creators and are subject to Freepik's licensing terms. All
               trademarks, logos, and service marks displayed are the property of
               their respective owners.
             </p>
@@ -209,7 +209,7 @@
               6. Third-Party Content
             </h2>
             <p>
-              Our website displays content from third-party sources (IconScout).
+              Our website displays content from third-party sources (Freepik).
               We do not control this content and are not responsible for its
               accuracy, legality, or appropriateness. Your use of third-party
               content is at your own risk.
