--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <ul class="space-y-2">
               <li>
                 <a
-                  href="https://iconscout.com/api"
+                  href="https://www.freepik.com/api"
                   target="_blank"
                   class="text-gray-400 hover:text-white"
                   >API Documentation</a
@@ -570,7 +570,7 @@
         <div
           class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400"
         >
-          <p>&copy; 2025 PeelJoy. Powered by IconScout API.</p>
+          <p>&copy; 2025 PeelJoy. Powered by Freepik API.</p>
         </div>
       </div>
     </footer>
@@ -691,16 +691,15 @@
           "https://placehold.co/128x128/f582ae/ffffff?text=No+Preview";
 
         if (type === "lottie") {
-          // IconScout API returns MP4 video preview for Lottie assets (thumb URL)
-          // The actual Lottie JSON is not available in the free API
-          const videoPreview = asset.urls?.thumb;
+          // Freepik provides image previews for animated/motion vectors
+          // Display as static image since Freepik doesn't have native Lottie animations
+          const imagePreview = asset.urls?.thumb || previewUrl;
 
           card.innerHTML = `
             <div class="relative p-4 bg-gray-50 flex items-center justify-center" style="height: 180px;">
-              <video src="${videoPreview}" autoplay loop muted playsinline
+              <img src="${imagePreview}" alt="${asset.name || "Animation"}"
                      class="max-h-full max-w-full object-contain"
-                     onerror="this.parentElement.innerHTML='<div class=\\'text-gray-400 text-center\\'><i class=\\'fas fa-film text-4xl mb-2\\'></i><br>Preview unavailable</div>'">
-              </video>
+                     onerror="this.src='https://placehold.co/128x128/27ae60/ffffff?text=Animation'">
               <span class="asset-type-badge ${badgeClass}">${badgeText}</span>
             </div>
             <div class="p-3">
@@ -824,7 +823,7 @@
 
         modalDescription.textContent = `A beautiful ${typeLabels[
           type
-        ].toLowerCase()} from IconScout. Click below to download.`;
+        ].toLowerCase()} from Freepik. Click below to download.`;
 
         // Get the best download URL
         const downloadUrl =
@@ -851,15 +850,14 @@
         try {
           // Determine file extension based on type and URL
           let extension = "png";
-          if (type === "lottie" || url.includes(".mp4")) {
-            // IconScout provides MP4 video previews for Lottie assets
-            extension = "mp4";
-          } else if (url.includes(".json")) {
+          if (url.includes(".json")) {
             extension = "json";
           } else if (url.includes(".svg")) {
             extension = "svg";
           } else if (url.includes(".gif")) {
             extension = "gif";
+          } else if (url.includes(".mp4")) {
+            extension = "mp4";
           }
 
           // Fetch the asset
