--- a/privacy.html
+++ b/privacy.html
@@ -278,9 +278,7 @@
                 to display ads on our website. Adsterra may use cookies and
                 similar technologies to serve relevant advertisements.
               </li>
-              <li>
-                <strong>IconScout API:</strong> For providing design assets
-              </li>
+              <li><strong>Freepik API:</strong> For providing design assets</li>
             </ul>
             <p class="mt-3">
               These third parties have their own privacy policies addressing how
