--- a/index.html
+++ b/index.html
@@ -83,6 +83,78 @@
     />
     <meta name="twitter:image" content="https://peeljoy.tech/og-image.png" />
 
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "PeelJoy",
+        "url": "https://peeljoy.tech/",
+        "description": "Download free icons, 3D icons, illustrations, and Lottie animations for your projects. High-quality design assets for web, mobile, and graphic design.",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://peeljoy.tech/?q={search_term_string}"
+          },
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "PeelJoy",
+        "url": "https://peeljoy.tech/",
+        "logo": "https://peeljoy.tech/og-image.png",
+        "sameAs": ["https://twitter.com/peeljoy", "https://github.com/peeljoy"],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer service",
+          "url": "https://peeljoy.tech/contact.html"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://peeljoy.tech/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Icons",
+            "item": "https://peeljoy.tech/#icons"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "3D Icons",
+            "item": "https://peeljoy.tech/#3d-icons"
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "name": "Illustrations",
+            "item": "https://peeljoy.tech/#illustrations"
+          },
+          {
+            "@type": "ListItem",
+            "position": 5,
+            "name": "Lottie Animations",
+            "item": "https://peeljoy.tech/#lottie"
+          }
+        ]
+      }
+    </script>
+
     <!-- Favicon -->
     <link
       rel="icon"
