--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="k5irT7D6C4hybWn1le0HlcgM0zzKW5qdkfyLsE1Rm90" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
