Format Google Search Console verification meta tag for consistency

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     ></script>
 
     <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="k5irT7D6C4hybWn1le0HlcgM0zzKW5qdkfyLsE1Rm90" />
+    <meta
+      name="google-site-verification"
+      content="k5irT7D6C4hybWn1le0HlcgM0zzKW5qdkfyLsE1Rm90"
+    />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
