Update default search queries to use "social media" for design asset types

--- a/index.html
+++ b/index.html
@@ -721,10 +721,10 @@
 
         // Use trending search terms when no query is provided
         const defaultQueries = {
-          icons: "business",
-          "3d-icons": "technology",
-          illustrations: "people",
-          lottie: "animation",
+          icons: "social media",
+          "3d-icons": "social media",
+          illustrations: "social media",
+          lottie: "social media",
         };
 
         try {
